--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "learn-redux",
+  "name": "photo-gallery",
   "version": "1.0.0",
-  "description": ":) ",
+  "description": "A simple photo gallery using react and redux",
   "scripts": {
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
     "test": "NODE_ENV=production mocha './tests/**/*.spec.js' --compilers js:babel-core/register",
     "clean": "rimraf dist",
-    "start": "node devServer.js",
-    "tunnel": "browser-sync start --proxy localhost:7770 --tunnel wesbos"
+    "start": "node devServer.js"
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/wesbos/Learn-Redux.git"
+    "type": "git"
   },
-  "author": "Wes Bos",
+  "author": "Pranab",
   "license": "MIT",
-  "homepage": "https://github.com/wesbos/Learn-Redux",
   "dependencies": {
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.4",
